eliminate fixed COM port

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,5 +11,5 @@ lib_deps = codewitch-honey-crisis/htcw_ttgo
 		codewitch-honey-crisis/htcw_fan_controller
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
-upload_port=COM3
-monitor_port=COM3
+;upload_port=COM3
+;monitor_port=COM3
